# totally_non_suspicios_repo

./: .gitignore  AppSettings.qml  CMakeLists.txt  CallButton.qml  ContactsGrid.qml  Header.qml  LICENSE  README.MD  contactlistmodel.cpp  contactlistprovider.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
qml/: CallButton.qml  ContactsList.qml  StarButton.qml  main.qml
src/: contactlistmodel.cpp  contactlistmodel.h  contactlistprovider.h  filterproxymodel.cpp  filterproxymodel.h  main.cpp  utility.h
